# enact

./: .dockerignore  .gitignore  .roorules  BARYO-PLAN-TEMPLATE.md  CLAUDE.md  Dockerfile  Enact Landing Page 1.html  Enact Landing Page 2.html  Enact Landing Page 3.html  Enact Landing Page Best.html  Handoff.md  INTENT_GUIDE.md  INTERVIEW_DECK.md  LICENSE  NEXT-SESSION.md  PLAN-TEMPLATE.md  PLAN.md  PROGRESS.md  README.md  RESTART-BACKEND.md  RESTART-DISCOVERY-RACE-CONDITION.md  RESTART-FRONTEND.md  RESTART-WIRE-PROTOTYPE.md  ROADMAP.md  SPEC.md  TDD-PLAN.md  TOUGH_QUESTIONS.md  VISA-DEMO-PROGRESS.md  about.html  agents.html  build_landing.py  code.html  demo.html  download_player.py  enact-intent.md  enact.intent  fly.toml  index.html  landing_page.html  logo-custom-c.html  (+12 more)
.claude/: settings.json
backend/: README.md  deadlock_explanation.md  debug_imports.py  models.py  receipts.py  requirements.txt  server.py  utils.py  workflow.py
blog/: 2026-04-28-claude-code-asymmetry.html  2026-04-28-gitignore-block.html  index.html
cloud/: auth.py  db.py  email.py  main.py  make_test_hitl.py  requirements.txt  seed_dev.py  token.py
docs/: docs.json  getting-started.mdx  integrations.mdx  migration.mdx  mint.json  outreach-plan.md
enact/: __init__.py  action.py  client.py  cloud_client.py  encryption.py  local_queue.py  models.py  policy.py  receipt.py  rollback.py  ui.py
evals/: README.md
examples/: action_demo.py  demo.cast  demo.py  full_demo.py  quickstart.py  record_demo.py
frontend/: index.html  review-prototype.html  roi-prototype.html  workflow-backup-mock-only.html  workflow.html
plans/: 2026-02-26-policies-abac-ddl-freeze.md  2026-03-01-cloud-mvp.md  2026-03-01-slack-connector.md  2026-03-06-revenue-launch.md  2026-03-07-enact-setup-skill.md  2026-03-07-stripe-integration.md  2026-04-26-chaos-harness.md  2026-04-26-enact-code-hook.md  2026-04-27-file-firewall-sweep.md  2026-04-27-ip-split-runbook.md  2026-04-27-multi-tool-hook.md  Enact-Business-Model-Pivot.md  abac-demo-tdd-plan.md  backend-architecture.html  current-state-analysis.md  dashboard-prototype.html  demo-friendly-ai.html  demo-ibm-carbon.html  demo-stripe.html  demo-v2-prototype.html  discovery-demo.html  discovery-vs-approval-problem.md  landing-page-deepseekv3-decisions.md  live-vs-mock-strategy.md  self-service-discovery-flow.md  ux-decisions.md  v2-design-decisions.md
static/: enact_demo.py
tests/: test_action.py  test_chaos_damage.py  test_chaos_orchestrate.py  test_chaos_reporter.py  test_chaos_runner.py  test_chaos_sandbox.py  test_chaos_suggest.py  (+27 more)
(+186 files in other folders)
