[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enact-sdk"
version = "0.3.0"
description = "An action firewall for AI agents"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
github = ["PyGithub"]
hubspot = ["hubspot-api-client"]
all = ["psycopg2-binary", "PyGithub", "hubspot-api-client"]
dev = [
    "pytest",
    "pytest-asyncio",
    "responses",
    "psycopg2-binary",
]

[tool.setuptools.packages.find]
include = ["enact*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
