[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enact-sdk"
version = "0.4"
description = "An action firewall for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
github = ["PyGithub"]
hubspot = ["hubspot-api-client"]
slack = ["slack-sdk"]
all = ["psycopg2-binary", "PyGithub", "hubspot-api-client", "slack-sdk"]
dev = [
    "pytest",
    "pytest-asyncio",
    "responses",
    "psycopg2-binary",
]

[project.scripts]
enact-ui = "enact.ui:main"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["enact*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
