[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enact-sdk"
version = "0.5.1"
description = "An action firewall for AI agents"
readme = "README.md"
license = {text = "Elastic License 2.0"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
github = ["PyGithub"]
hubspot = ["hubspot-api-client"]
slack = ["slack-sdk"]
cloud = ["cryptography>=42.0.0"]
all = ["psycopg2-binary", "PyGithub", "hubspot-api-client", "slack-sdk", "cryptography>=42.0.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "responses",
    "psycopg2-binary",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
]


[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["enact*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
